--- a/block/templates/block_list.html
+++ b/block/templates/block_list.html
@@ -11,6 +11,7 @@
        <div class="row">
            <div class=" col-md-2">
                &nbsp;
+
            </div>
            <div class=" col-md-8">
                <div class="jumbotron">
@@ -36,6 +37,8 @@
            </div>
            <div class=" col-md-2">
                &nbsp;
+               <a href="/usercenter/register">注册</a>
+               <a href="/accounts/login">登录</a>
            </div>
        </div>
     </div>
