--- a/article/templates/article_create.html
+++ b/article/templates/article_create.html
@@ -8,7 +8,7 @@
 	<div class=" col-md-8">
 		<ol class="breadcrumb">
 			<li><a href="{% url 'block_list' %}">首页</a></li>
-			<li><a class="active" href="{% url 'article_list' c.id %}">{{c.name}}</a></li>
+			<li><a class="active" href="{% url 'article_list' b.id %}">{{b.name}}</a></li>
 			<li>发表文章</li>
 		</ol>
 
