--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,28 +11,38 @@
         {% endif %}
 <div class="panel panel-info">
         <div class="panel-heading">
-          <b>登陆</b>
+          <b>登录</b>
         </div>
         <div class="panel-body">
-          <form method="post" action="｛% url 'login' %｝">{% csrf_token %}
-          <input type="hidden" name="next" value="{{ next }}" />
+          <form method="post" action="{% url 'login' %}">{% csrf_token %}
+
           <div class="input-group">
-              <span class="input-group-addon">用户名&nbsp;&nbsp;&nbsp;&nbsp;</span>
+              <span class="input-group-addon">用户名</span>
               <input id="id_username" maxlength="254" name="username" type="text" class="form-control">
           </div>
-
+          <br>
           <div class="input-group">
-              <span class="input-group-addon">密码&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+              <span class="input-group-addon">密码&nbsp;&nbsp;&nbsp;&nbsp;</span>
               <input id="id_password" name="password" type="password" class="form-control">
           </div>
-
+          <br>
           <input type="submit" class="btn btn-primary" value="登录">
+          <input type="hidden" name="next" value="">
           </form>
         </div>
         <div class="panel-footer">
-          <a href="/accounts/register/">没有账户?去注册...</a>
+          <a href="/usercenter/register">还没有账户?去注册...</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="/accounts/password_reset/">忘记密码!</a>
+
         </div>
       </div>
+
 </div>
     </div>
 {% endblock %}
