--- a/article/templates/article_create.html
+++ b/article/templates/article_create.html
@@ -1,46 +1,57 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class="row">
-	<div class=" col-md-2">
-		&nbsp;
-	</div>
-	<div class=" col-md-8">
-		<ol class="breadcrumb">
-			<li><a href="{% url 'block_list' %}">首页</a></li>
-			<li><a class="active" href="{% url 'article_list' b.id %}">{{b.name}}</a></li>
-			<li>发表文章</li>
-		</ol>
+<div class="col-sm-12">
+  <ol class="breadcrumb">
+    <li><a href="{% url 'block_list' %}">首页</a></li>
+    <li><a href="{% url 'article_list' b.id %}">{{ b.name }}</a></li>
+    <li class="active">发表文章</li>
+  </ol>
+  {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-danger">{{ message }} </div>
+    {% endfor %}
+  {% endif %}
+  <form class="form-horizontal" method="POST" action=""> {% csrf_token %}
+    <div class="form-group">
+      <label for="inputTitle" class="col-sm-2 col-md-1 control-label">标题</label>
+      <div class="col-sm-10 col-md-10">
+        <input type="text" class="form-control" id="inputTitle" placeholder="标题" name="title" required value="{{ title }}" />
+      </div>
+      <div class="col-sm-0 col-md-11">
+        &nbsp;
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputContent" class="col-sm-2 col-md-1 control-label">内容</label>
+      <div class="col-sm-10 col-md-10">
+        <!-- 加载编辑器的容器 -->
+        <script id="container" name="content" type="text/plain">
 
-		<table class="table table.bordered">
-            <tr>
-                <form class="form-horizontal" method="POST" action=""> {% csrf_token %}
-                    <div class="form-group">
-                        <label for="inputTitle" class="col-sm-2 control-label">标题</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="title"
-                                   placeholder="请输入标题">
-                        </div>
-
-                        <label for="inputContent" class="col-sm-2 control-label">内容</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" rows="5" name="content"
-                            placeholder="请输入内容"></textarea>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">发表</button>
-                    {% if messages %}
-                    {% for message in messages %}
-                    <div class="alert alert-info">{{ message }} </div>
-                    {% endfor %}
-                    {% endif %}
-                </form>
-
-            </tr>
-
-		</table>
-
-	</div>
+        </script>
+        <input type="hidden" name="content" id="contentInput" />
+      </div>
+      <div class="col-sm-0 col-md-11">
+        &nbsp;
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-1 col-sm-10">
+        <button type="submit" class="btn btn-primary" onclick="return setContent()">发表</button>
+      </div>
+    </div>
+    <!-- 配置文件 -->
+    <script type="text/javascript" src="/static/lib/ueditor/ueditor.config.js"></script>
+    <!-- 编辑器源码文件 -->
+    <script type="text/javascript" src="/static/lib/ueditor/ueditor.all.js"></script>
+    <!-- 实例化编辑器 -->
+    <script type="text/javascript">
+    var ue = UE.getEditor('container');
+    function setContent() {
+       document.getElementById("contentInput").value = ue.getContent();
+    }
+    </script>
+</form>
 </div>
-
+</div>
 {% endblock %}
